<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>crane_simple_ai</name>
  <version>0.0.0</version>
  <description>simple ai for testing</description>
  <maintainer email="ibis.ssl.team@gmail.com">ibis ssl</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>consai_visualizer_msgs</depend>
  <depend>crane_msg_wrappers</depend>
  <depend>crane_msgs</depend>
  <depend>crane_robot_skills</depend>
  <depend>libqt5-core</depend>
  <depend>libqt5-gui</depend>
  <depend>libqt5-widgets</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>crane_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
