<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>crane_world_model_publisher</name>
  <version>0.0.0</version>
  <description>crane_world_model_publisher</description>
  <maintainer email="macakasit@gmail.com">akshota</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>boost</depend>
  <depend>consai_visualizer_msgs</depend>
  <depend>crane_geometry</depend>
  <depend>crane_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>robocup_ssl_msgs</depend>
  <depend>std_msgs</depend>
  <depend>backward_ros</depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>crane_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
