<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>crane_world_observer</name>
  <version>0.0.0</version>
  <description>World Observer</description>
  <maintainer email="macakasit@gmail.com">akshota</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>consai2r2_msgs</depend>
  <depend>crane_msgs</depend>
  <depend>crane_geometry</depend>
  <depend>crane_msg_wrappers</depend>
  <depend>boost</depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
